# stellar-security-tokens

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  AGENTS.md  API.md  CLAUDE.md  DOCKER.md  Dockerfile  EMAIL_SETUP.md  LOVABLE_PROMPT.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  test_bullet_offer.json
.claude/: launch.json
contracts/token_sale/: Cargo.toml
contracts/token_sale/src/: lib.rs  test.rs
contracts/token_sale/test_snapshots/test/: test_admin_seller_separation.1.json  test_admin_transfer_chain.1.json  test_admin_transfer_happy_path.1.json  test_admin_transfer_new_admin_can_withdraw.1.json  test_admin_transfer_propose_overwrite.1.json  test_admin_transfer_seller_unchanged.1.json  test_atomicity_failed_trade_reverts.1.json  test_auth_accept_admin_requires_pending_auth.1.json  test_auth_create_requires_admin_auth.1.json  test_auth_emergency_drain_requires_admin_auth.1.json  test_auth_freeze_buyer_requires_admin_auth.1.json  test_auth_propose_admin_requires_admin_auth.1.json  test_auth_set_active_requires_seller_auth.1.json  test_auth_updt_fee_requires_admin_auth.1.json  test_auth_updt_price_requires_seller_auth.1.json  test_buyer_cap_exact_limit.1.json  test_buyer_cap_exceeded.1.json  test_buyer_cap_independent_per_buyer.1.json  test_buyer_cap_within_limit.1.json  test_buyer_cap_zero_means_no_cap.1.json  test_create_double_create_fails.1.json  test_create_happy_path.1.json  test_create_invalid_fee_bps.1.json  test_create_max_u32_prices.1.json  test_create_starts_inactive.1.json  test_create_with_compliance_fields.1.json  test_create_zero_price.1.json  test_deadline_trade_after_deadline.1.json  test_deadline_trade_at_exact_deadline.1.json  test_deadline_trade_before_deadline.1.json  test_deadline_zero_means_no_deadline.1.json  test_emergency_drain.1.json  test_emergency_drain_after_partial_trades.1.json  test_emergency_drain_blocks_further_trades.1.json  test_emergency_drain_empty_contract.1.json  test_exact_supply_exhaustion.1.json  test_failed_trade_reverts_all_transfers.1.json  test_freeze_buyer_blocks_trade.1.json  test_freeze_idempotent.1.json  test_freeze_only_affects_target.1.json  (+45 more)
contracts/yield_distributor/: Cargo.toml
contracts/yield_distributor/src/: lib.rs  test.rs
contracts/yield_distributor/test_snapshots/test/: lifecycle_monthly_yield_full_term_correct.1.json  t10_non_usdc_token_works_if_authed.1.json  t11_overflow_detected.1.json  t15_distribute_without_auth_fails.1.json  t16_event_emitted_on_distribute.1.json  t17_batch_29_succeeds.1.json  t2_upgrade_requires_admin_auth.1.json  t3_upgrade_non_admin_fails.1.json  t5_paused_blocks_distribute.1.json  t6_resume_restores_functionality.1.json  t8_payer_equals_fee_recipient_allowed.1.json  t9_insufficient_payer_balance_panics.1.json  test_distribute_batch_too_large.1.json  test_distribute_fee_at_cap.1.json  (+27 more)
(+801 files in other folders)
